* Fixed edit icon's alignment in hops history

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/hops.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/hops.scss
@@ -178,6 +178,7 @@
 }
 
 .hops-container__history-event-action {
+  align-self: flex-start;
   margin: 0 7px 0 0;
 }
 
